@@ -1,5 +1,5 @@
 name=SdFat
-version=1.0.16
+version=1.1.0
 license=MIT
 author=Bill Greiman <fat16lib@sbcglobal.net>
 maintainer=Bill Greiman <fat16lib@sbcglobal.net>
